# llama.cpp-turboquant-hip

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CODEX_TASK_COMPACTION.md  CODEX_TASK_GEMMA4.md  Dockerfile.tria-eval  Dockerfile.turboquant-rocm  README.md  TURBOQUANT.md  compose.yaml  counters_alu_occ.txt  counters_full.yaml  counters_lds_cache.txt  counters_minimal.yaml  counters_salu_mem.txt  counters_v3.2_charter.txt  counters_v3.2_p3.txt  counters_v3.2_p3.yaml  counters_wave_misc.txt  mtp_results.txt  ncmoe_sweep_256k_results.csv  parse_hip_events.py  turbo.py
benchmarks/: MoE_16k_original_envOFF.json  MoE_16k_turboquant_envON.json  MoE_8k_original_envOFF.json  MoE_8k_turboquant_envON.json  MoE_audit_2048.json  MoE_original_audit.json  MoE_original_envOFF.json  MoE_original_envON.json  MoE_turboquant_envOFF.json  MoE_turboquant_envON.json  README.md  baseline_2048.json  dense_audit_2048.json  dense_original_envOFF.json  dense_original_envON.json  dense_turboquant_envOFF.json  dense_turboquant_envON.json  summary_v0.3.1.json  turbo_audit_2048.json
benchmarks/forensic_audit/: FINAL_REPORT.md
common/: arg.cpp  common.cpp  common.h
docker/: Dockerfile.rdna2  docker-compose.rdna2.yml
docs/: BENCHMARKS.md  GIT_WORKFLOW.md  HARDWARE_LIMITS_RDNA2.md  KNOWN_LIMITATIONS.md  PR_upstream_90lines.md  PR_upstream_bfe_fence.md  RDNA2_FLAGS.md  RDNA2_QUICKSTART.md  RESEARCH.md  RESEARCH_LOG.md  VALIDATION_TEMPLATE.md  p2_mmvq_baseline.md  rdna2-experimental.md  v0.3.2-BASELINE.md
ggml/include/: ggml.h
ggml/src/: ggml-turbo-quant.c  ggml.c
ggml/src/ggml-cpu/: ggml-cpu.c  ggml-cpu.cpp  ops.cpp
ggml/src/ggml-cuda/: common.cuh  convert.cu  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile.cuh  fattn-vec.cuh  fattn-wmma-f16.cu  fattn.cu  ggml-cuda.cu  iq4_dequant_rdn2.cu  iq4_dequant_rdn2.cuh  mmq.cuh  mmvq.cu  quant_layouts_rdn2.cuh  set-rows.cu  turbo-innerq.cu  turbo-innerq.cuh  turbo-quant.cuh  vecdotq.cuh
ggml/src/ggml-cuda/vendors/: hip.h
ggml/src/ggml-hip/: CMakeLists.txt
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
include/: llama.h
opencode/agents/: AMD.md  DEEP_ISA_MISSION.md  KERNEL_ENGINEER.md  ROCM_AGENT_OPTIMIZATION.md  chief_engineer.md
scripts/: build_rdna2.sh  build_rdna2_llama.sh  counters_inf_cache.txt  counters_p2_ic.txt  counters_p2_mmvq.txt  debug-test.sh  download_bfe_models.sh  gpu_failback.sh  parse_bench.py  run_ab_telemetry.sh  run_rdna2_bench.sh  run_rocprof_baseline.sh  run_std_bench.sh  test_inference.sh  validate_hygiene.sh  validate_qwen3_reasoning.sh  verify_kernel_dispatch.sh
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-recurrent.cpp  llama-memory.h  llama-model-loader.cpp  llama-model.cpp  llama-mtp.h  triattention-backend.c  triattention-backend.h  triattention-bridge.cpp  triattention-hip.h  triattention-hip.hip  triattention-runtime.c  triattention-runtime.h  triattention.c
tests/: CMakeLists.txt  smoke_rdna2.cpp  test-backend-ops.cpp
tests/hip/: dequant_microbench.cpp  dequant_microbench.cu  test_dequant_rdn2.cpp
tools/: dequant_benchmark  dequant_benchmark.cu  dequant_benchmark_v2  dequant_benchmark_v2.cu  gpu_bandwidth_test.cu
tools/cli/: cli.cpp
tools/llama-bench/: llama-bench.cpp
tools/server/: server-context.cpp  server-task.cpp
